removed statements font size styles, updated button font sizes and fixed root markup to align with new font sizes

--- a/client/stylesheets/templates/modules/elements/buttons.less
+++ b/client/stylesheets/templates/modules/elements/buttons.less
@@ -9,7 +9,7 @@
 	background: @gray-lighter;
 	color: @font-color;
   font-family: @font-family-base;
-  font-size: @font-size-small;
+  font-size: @mobile-font-base;
   line-height: @line-height-base;
   cursor: pointer;
 
